[package]
name = "runes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
argopt = "0.2.0"
bytesize = "1.1.0"
chrono = "0.4.19"
log = "0.4.14"
prettytable-rs = "0.8.0"
sdl2 = { version = "0.35.1", features = ["ttf"] }
