[package]
name = "sabicom"
version = "0.1.0"
edition = "2021"

[dependencies]
meru-interface = "0.1.0"

ambassador = "0.3.2"
bincode = "1.3.3"
bitvec = "1.0.1"
bytesize = "1.1.0"
chrono = "0.4.22"
crc32fast = "1.3.2"
log = "0.4.17"
serde = "1.0.143"
thiserror = "1.0.32"

[dev-dependencies]
once_cell = "1.13.1"
