[package]
name = "sabicom"
version = "0.2.0"
edition = "2021"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
license = "MIT"
description = "NES emulator"
repository = "https://github.com/tanakh/sabicom"
readme = "README.md"
categories = ["emulators"]
keywords = ["emulators", "nes"]

[dependencies]
meru-interface = "0.3.0"

ambassador = "0.3.2"
bincode = "1.3.3"
bitvec = "1.0.1"
bytesize = "1.1.0"
chrono = "0.4.22"
crc32fast = "1.3.2"
log = "0.4.17"
schemars = { version = "0.8.10", features = ["schemars_derive"] }
serde = "1.0.144"
thiserror = "1.0.33"

[dev-dependencies]
anyhow = "1.0.63"
